[package]
name = "boiler"
version = "0.1.1"
description = "A library for connecting to steam servers."
homepage = "https://github.com/TF2Maps/boiler-generated"
repository = "https://github.com/TF2Maps/boiler-generated"
authors = ["Layl <LaylConway@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "0.4"
enum_primitive = "0.1"
flate2 = "0.2.13"
log = "0.3.6"
mio = "0.5"
num = "0.1"
openssl = "0.7"
rand = "0.3"
boiler-generated = "0.1.0"
